# edflib

./: .gitignore  CMakeLists.txt  EDFAnnotation.cpp  EDFAnnotation.h  EDFDate.cpp  EDFDate.h  EDFFile.cpp  EDFFile.h  EDFHeader.cpp  EDFHeader.h  EDFLib.h  EDFParser.cpp  EDFParser.h  EDFPatient.cpp  EDFPatient.h  EDFSignalData.cpp  EDFSignalData.h  EDFTime.cpp  EDFTime.h  EDFUtil.cpp  EDFUtil.h  README.md  test.cpp
EDFLIB.xcodeproj/: project.pbxproj
EDFLIB.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
EDFLIB.xcodeproj/project.xcworkspace/xcuserdata/macawm.xcuserdatad/: UserInterfaceState.xcuserstate
EDFLIB.xcodeproj/xcuserdata/macawm.xcuserdatad/xcschemes/: edflib.xcscheme  test.xcscheme  xcschememanagement.plist
Unit Tests/: main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
